--- a/1.12 Photo Gallery/index.html
+++ b/1.12 Photo Gallery/index.html
@@ -6,8 +6,12 @@
     <title>Photo Gallery</title>
 </head>
 <body>
-    <section><img src="images/Dev-Workshop-Logo.png" alt="Dev Workshop Logo" width="300"></section>
-    <section><img src="images/IUPUIMascot.png" alt="IUPUI Mascot" width="300"></section>
+    <section>
+        <img src="images/Dev-Workshop-Logo.png" alt="Dev Workshop Logo" width="300">
+    </section>
+    <section>
+        <img src="images/IUPUIMascot.png" alt="IUPUI Mascot" width="300">
+    </section>
     <section>
             <table border="1">
                 <caption>Summer Vacation Info</caption>
