Did Project 1, Edited Lecture 1

--- a/Lecture 1/page2.html
+++ b/Lecture 1/page2.html
@@ -15,6 +15,22 @@
     </nav>
 </header>
 
+<!-- The <p> tag is used to indicate a paragraph section, used for large sections of text. Additional tags like <strong> and <em> can be used to style some of the text right in the html code.-->
+
+<!--The Strong and Bold tags, as well as the Emphasized and Italicized tags, do essentially the same thing. It's simply semantics, however you prefer to organize your code.-->
+<p>This is a paragraph.</p>
+
+<p>This is a <strong>Strong</strong> Tag</p>
+
+<p>This is an <em>Emphasized</em> Tag</p>
+
+<p>This is an <i>Italicized</i> Tag</p>
+
+<p>This is a <b>Bold</b> Tag</p>
+
+<p>This is an <u>Underlined</u> Tag</p>
+
+
 <!--The Anchor Tag creates a hyperlink to a another page or website.-->
 <!--Using the target tag will open the link in another tab.-->
 <a href="link.html">Link</a>
