--- a/Week 3.2/index.html
+++ b/Week 3.2/index.html
@@ -16,4 +16,33 @@
             <dd>HTML is a Markup Language</dd>
         </dl>
 
-<!--A nested list is 
+<!--A nested list is a description list within abother description list-->
+        <h1>Nested List</h1>
+        <dl>
+            <dt>Video Tag</dt>
+            <dd>Supported Formats
+                <dl>
+                    <dd>MP4</dd>
+                    <dd>WebM</dd>
+                </dl>
+            </dd>
+        </dl>
+    </section>
+</body>
+</html>
+
+<!--Media Tags-->
+
+<!--Audio Tag: Used to embed audio files-->
+<!--Control tag adds playback controls to the audio file-->
+<audio controls>
+    <source src="Stars MASTER 3.wav" type="audio/wav">
+</audio>
+<br>
+<br>
+
+<!--Video Tag: Used to embed video files-->
+<video controls>
+    <source src="32896846ca44f525.mp4" type="video/mp4">
+    Your browser does not support this video type
+</video>
