--- a/Assignment 3/index.html
+++ b/Assignment 3/index.html
@@ -13,29 +13,4 @@
         <dl>Java
             <dd>
                 <dl>Powerful
-                    <dd>Java provides strong performance, robust memory management, and extensive standard libraries for complex applications</dd>
-                </dl>
-                <dl>Enterprise
-                    <dd>Java is widely used in large-scale enterprise systems due to its scalability, security features, and long-term stability</dd>
-                </dl>
-               
-            </dd>
-        </dl>
-        <dl>Python
-            <dd>Python is an <i>easy-to-learn</i> programming language that emphasizes readability and rapid development</dd>
-        </dl>
-    </dd>
-</dl>
-
-<dl>Databases
-    <dd>
-        <dl>MySQL
-            <dd>MySQL is an <u>open-source</u> relational database management system commonly used for web and enterprise applications.</dd>
-        </dl>
-    </dd>
-</dl>
-
-<blockquote>"Code is like humor. When you have to explain it, it's bad."</blockquote>
-    
-</body>
-</html>
+                    <dd>Java provides strong performance, robust memory management, and extensive standard libraries for complex applicat
