--- a/Assignment 6/index.html
+++ b/Assignment 6/index.html
@@ -1,5 +1,3 @@
-Template:
-
 <!DOCTYPE html>
 
 <html lang="en">
@@ -9,8 +7,7 @@ Template:
     <meta charset="UTF-8">
 
     <title>Auto Purchase Offer and Loan Comparison</title>
-
-    <link href="style.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
 
 </head>
 
